[Refactor] refactorisation du retour de la vérification panier